# fhaws

./: LICENSE  README.md  pyproject.toml
examples/: role_chain_into_child_account_with_s3_example.py
fhaws/: __init__.py  ce.py  ec2.py  iam.py  org.py  role_chain  s3.py  sts  sts.py  support.py
images/: example-org-diagram.md
