[tool.poetry]
name = "fhaws"
version = "0.3.1"
description = "A module containing helper functions to make working with Boto3 and Amazon AWS easier with Python"
authors = ["Robert McDermott"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/robert-mcdermott/fhaws"
keywords = ["AWS", "Boto3"]


[tool.poetry.dependencies]
python = "^3.7"
boto3 = "^1.24.37"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
